# tp-lab-9

./: CMakeLists.txt  README.md  a.out  main1  main1.cpp  main2  main3  sumProgram  task3.h
.github/workflows/: cpplint.yml  release.yml
include/: task1.cpp  task1.h  task2.h  task3.h  task_1.h  task_first.h  task_third.h
src/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main_first.cpp  main_second.cpp  task1.cpp  task1.h  task2.cpp  task3.cpp  task_1.cpp  task_first.cpp  task_third.cpp
test/: tests.cpp
